fix(backend): fixed docs and nil pointer
